--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,6 +12,10 @@ jobs:
           name: Install dependencies
           command: npm install
       - run: npm run test
+      - run:  name: "echo environment one"
+              command: echo $SLACK_ACCESS_TOKEN
+      - run:  name: "echo environment two"
+              command: echo SLACK_ACCESS_TOKEN
       - slack/notify:
           custom: |
             {
@@ -33,3 +37,5 @@ workflows:
   build-and-notify:
     jobs:
       - build-test-and-notify
+          context:
+            - slackIntergration
