updated CI config file_Rev5

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,8 +8,9 @@ jobs:
       name: node/default
     steps:
       - checkout
-      - run:  command: echo $SLACK_ACCESS_TOKEN
-      - run:  command: echo SLACK_ACCESS_TOKEN
+      - run:
+          name: "echo environment variables from org-global context"
+          command: echo $SLACK_ACCESS_TOKEN
       - run:
           name: Install dependencies
           command: npm install
