updated CI config file_Rev8

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -35,6 +35,6 @@ jobs:
 workflows:
   build-and-notify:
     jobs:
-      - build-test-and-notify
-      context:
-        - slackIntergration
+      - build-test-and-notify:
+                      context:
+                        - slackIntergration
